# m3u-filter

./: .dockerignore  .gitignore  Dockerfile.web  LICENSE  Readme.md
.github/workflows/: desktop-publish.yml  docker-publish.yml
backend/: app.py  config.py  database.py  m3u_generator.py  main.py  pyinstaller.spec  requirements.txt  utils.py
backend/database/migrations/: 001_init.sql  002_update.sql  003_update.sql  004_update.sql  005_update.sql  006_update.sql  007_update.sql
backend/models/: __init__.py  common.py  epg.py  rule_sets.py  rule_tree.py  rules.py  sort_templates.py  streams.py
backend/modules/pool_executor/: __init__.py
backend/routers/: __init__.py  blocked_domains.py  default_channel_logos.py  epg_channels.py  epg_programs.py  epg_sources.py  filter_rule_sets.py  filter_rules.py  group_mappings.py  proxy_config.py  site_config.py  sort_templates.py  static_files.py  stream_sources.py  stream_tracks.py
backend/scheduler/: __init__.py
backend/scripts/: sync-default-logo.py
backend/sync/: __init__.py
backend/utils/: __init__.py  network_utils.py  video_utils.py
desktop/: package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend_service.rs  lib.rs
frontend/: package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
frontend/scripts/: init-msw.mjs
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/api/: auth.ts  blockedDomains.ts  channelLogo.ts  epgChannels.ts  epgPrograms.ts  epgSources.ts  filterRuleSets.ts  filterRules.ts  groupMappingTemplates.ts  proxyConfig.ts  siteConfig.ts  sortTemplates.ts  streamSources.ts  streamTracks.ts
frontend/src/components/: BlockedDomains.tsx  ChannelLogoList.tsx  EPGChannelForm.tsx  (+20 more)
(+30 files in other folders)
