[package]
name = "m3u-filter-desktop"
version = "1.0.0"
edition = "2024"
authors = ["LunnLew <lunnlew@gmail>"]
description = "M3U Filter Desktop Application"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
sysinfo = "0.34.1"
